[package]
name = "rocket_study"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"
serde = { version = "1.0", features = ["derive"] } # 引用serde并开启derive features
serde_json = "1.0" # 用于serde<-->json